# TEAM_11_ML_OPS

./: .gitignore  README.md  pytest.ini
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/: README.md  config.env  mlflow_team11.ipynb  mlflow_team11.py  pyproject.toml  test.ipynb
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/mlruns/0/: meta.yaml
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/mlruns/0/0556961e111d4f53979346972a86e49a/: meta.yaml
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/mlruns/0/1079fc84d9e34302bd8f6174b63eb69e/: meta.yaml
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/mlruns/0/13a8af8adbe14138b2f19964fe926c16/: meta.yaml
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/mlruns/0/1f8f2ccb54e3434b8f4811fbada41eee/: meta.yaml
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/mlruns/0/2cb8ee7bdc1e4236934d539b531b6fc1/: meta.yaml
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/mlruns/0/45c70b4a056243bab6af1d7ff39d0575/: meta.yaml
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/mlruns/0/4725db7fcedb4921b89ac74f78a5c8cb/: meta.yaml
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/mlruns/0/71b9b7520c86494b996eee92b588660b/: meta.yaml
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/notebooks/: EDA.ipynb  EDA_Refactor.ipynb
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/src/: explore_data.py
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/team_11_ml_ops_module/: load_data.py
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/team_11_ml_ops_module/modeling/: __init__.py  predict.py  train.py
Fase_1.1_Modeling_pipeline/TEAM_11_ML_OPS/tests/: test_mlflow_team11.py
Fase_1_Avance_Proyecto/: README.md
test/: README.md  (+1 more)
(+162 files in other folders)
